--- a/login.html
+++ b/login.html
@@ -129,9 +129,8 @@
           signInSuccessUrl: 'https://aviral-vlogs.firebaseapp.com',      //to be changed at production
           signInOptions: [
             // Leave the lines as is for the providers you want to offer your users.
-            firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-            firebase.auth.FacebookAuthProvider.PROVIDER_ID,
-          firebase.auth.TwitterAuthProvider.PROVIDER_ID
+            firebase.auth.GoogleAuthProvider.PROVIDER_ID
+            
             
           ],
           // tosUrl and privacyPolicyUrl accept either url string or a callback
