--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                     class="waves-effect waves-light btn yellow darken-3 hide-on-log-out">Sign
                                     Out</a></li>
 
-                            <li><a href="#" id="sign-in"
+                            <li><a href="login.html" id="sign-in"
                                     class="waves-effect waves-light btn yellow darken-3 hide-on-log-in">Sign
                                     In</a></li>
                             <li><img class="user-icon circle" src="user-placeholder.png"></li>
