--- a/discussion.html
+++ b/discussion.html
@@ -29,7 +29,7 @@
         <div class="navbar-fixed">
             <nav>
                 <div class="nav-wrapper blue darken-1">
-                    <a href="index.html" class="brand-logo">Forum</a>
+                    <a href="index.html" class="brand-logo">EduForum Blog</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <span class="right">
                         <ul class="hide-on-med-and-down">
@@ -39,6 +39,8 @@
                             <li><a id="edit-button" href="book-reviews.html"><i class="material-icons left">book</i>Book
                                     Reviews</a></li>
                             <li><a href="vod.html"><i class="material-icons left">video_library</i>Video of the Day</a>
+                            </li>
+                            <li><a href="practice-sheets.html"><i class="material-icons left">file_copy</i>Practice sheets</a>
                             </li>
                             <li><a href="#" id="sign-out"
                                     class="waves-effect waves-light btn yellow darken-3 hide-on-log-out">Sign
