--- a/vod.html
+++ b/vod.html
@@ -30,7 +30,7 @@
         <div class="navbar-fixed">
             <nav>
                 <div class="nav-wrapper blue darken-1">
-                    <a href="index.html" class="brand-logo">Videos</a>
+                    <a href="index.html" class="brand-logo">EduForum Blog</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <span class="right">
                         <ul class="hide-on-med-and-down">
@@ -41,11 +41,13 @@
                                     Reviews</a></li>
                             <li><a href="vod.html"><i class="material-icons left">video_library</i>Video of the Day</a>
                             </li>
+                            <li><a href="practice-sheets.html"><i class="material-icons left">file_copy</i>Practice sheets</a>
+                            </li>
                             <li><a href="#" id="sign-out"
                                     class="waves-effect waves-light btn yellow darken-3 hide-on-log-out">Sign
                                     Out</a></li>
 
-                            <li><a href="#" id="sign-in"
+                            <li><a href="login.html" id="sign-in"
                                     class="waves-effect waves-light btn yellow darken-3 hide-on-log-in">Sign
                                     In</a></li>
                             <li><img class="user-icon circle" src="user-placeholder.png"></li>
