--- a/practice-sheets.html
+++ b/practice-sheets.html
@@ -41,11 +41,13 @@
                                     Reviews</a></li>
                             <li><a href="vod.html"><i class="material-icons left">video_library</i>Video of the Day</a>
                             </li>
+                            <li><a href="practice-sheets.html"><i class="material-icons left">file_copy</i>Practice sheets</a>
+                            </li>
                             <li><a href="#" id="sign-out"
                                     class="waves-effect waves-light btn yellow darken-3 hide-on-log-out">Sign
                                     Out</a></li>
 
-                            <li><a href="#" id="sign-in"
+                            <li><a href="login.html" id="sign-in"
                                     class="waves-effect waves-light btn yellow darken-3 hide-on-log-in">Sign
                                     In</a></li>
                             <li><img class="user-icon circle" src="user-placeholder.png"></li>
