--- a/discussion.html
+++ b/discussion.html
@@ -38,7 +38,7 @@
                                 </a></li>
                             <li><a id="edit-button" href="book-reviews.html"><i class="material-icons left">book</i>Book
                                     Reviews</a></li>
-                            <li><a href="vod.html"><i class="material-icons left">video_library</i>Video of the Day</a>
+                            <li><a href="vod.html"><i class="material-icons left">video_library</i>Videos</a>
                             </li>
                             <li><a href="practice-sheets.html"><i class="material-icons left">file_copy</i>Practice sheets</a>
                             </li>
@@ -75,7 +75,7 @@
                 forum</a></li>
         <li><a id="book-reviews" href="book-reviews.html" class="waves-effect"><i
                     class="material-icons left">book</i>Book Reviews</a></li>
-        <li><a href="vod.html" class="waves-effect"><i class="material-icons left">video_library</i>Video of the Day</a>
+        <li><a href="vod.html" class="waves-effect"><i class="material-icons left">video_library</i>Videos</a>
         </li>
         <li><a href="practice-sheets.html" class="waves-effect"><i class="material-icons left">file_copy</i>Practice Sheets</a>
         </li>
