--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
                                 </a></li>
                             <li><a id="edit-button" href="book-reviews.html"><i class="material-icons left">book</i>Book
                                     Reviews</a></li>
-                            <li><a href="vod.html"><i class="material-icons left">video_library</i>Video of the Day</a>
+                            <li><a href="vod.html"><i class="material-icons left">video_library</i>Videos</a>
                             </li>
                             <li><a href="#" id="sign-out"
                                     class="waves-effect waves-light btn yellow darken-3 hide-on-log-out">Sign
