--- a/practice-sheets.html
+++ b/practice-sheets.html
@@ -39,7 +39,7 @@
                                 </a></li>
                             <li><a id="edit-button" href="book-reviews.html"><i class="material-icons left">book</i>Book
                                     Reviews</a></li>
-                            <li><a href="vod.html"><i class="material-icons left">video_library</i>Video of the Day</a>
+                            <li><a href="vod.html"><i class="material-icons left">video_library</i>Videos</a>
                             </li>
                             <li><a href="practice-sheets.html"><i class="material-icons left">file_copy</i>Practice
                                     sheets</a>
@@ -77,7 +77,7 @@
                 forum</a></li>
         <li><a id="book-reviews" href="book-reviews.html" class="waves-effect"><i
                     class="material-icons left">book</i>Book Reviews</a></li>
-        <li><a href="vod.html" class="waves-effect"><i class="material-icons left">video_library</i>Video of the Day</a>
+        <li><a href="vod.html" class="waves-effect"><i class="material-icons left">video_library</i>Videos</a>
         </li>
         <li id="sign-out-sidenav" class="hide-on-log-out" onclick="signOut()"><a href="#" class="waves-effect"><i
                     class="fa fa-2x fa-sign-out left" aria-hidden="true"></i>Sign Out</a></li>
