--- a/vod.html
+++ b/vod.html
@@ -30,7 +30,7 @@
         <div class="navbar-fixed">
             <nav>
                 <div class="nav-wrapper blue darken-1">
-                    <a href="index.html" class="brand-logo">Video of the Day</a>
+                    <a href="index.html" class="brand-logo">Videos</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <span class="right">
                         <ul class="hide-on-med-and-down">
@@ -39,7 +39,7 @@
                                 </a></li>
                             <li><a id="edit-button" href="book-reviews.html"><i class="material-icons left">book</i>Book
                                     Reviews</a></li>
-                            <li><a href="vod.html"><i class="material-icons left">video_library</i>Video of the Day</a>
+                            <li><a href="vod.html"><i class="material-icons left">video_library</i>Videos</a>
                             </li>
                             <li><a href="practice-sheets.html"><i class="material-icons left">file_copy</i>Practice sheets</a>
                             </li>
@@ -76,7 +76,7 @@
                 forum</a></li>
         <li><a id="book-reviews" href="book-reviews.html" class="waves-effect"><i
                     class="material-icons left">book</i>Book Reviews</a></li>
-        <li><a href="vod.html" class="waves-effect"><i class="material-icons left">video_library</i>Video of the Day</a>
+        <li><a href="vod.html" class="waves-effect"><i class="material-icons left">video_library</i>Videos</a>
         </li>
         <li><a href="practice-sheets.html" class="waves-effect"><i class="material-icons left">file_copy</i>Practice Sheets</a>
         </li>
