--- a/discussion.html
+++ b/discussion.html
@@ -151,12 +151,12 @@
     <script>
         // Initialize Firebase
         var config = {
-            apiKey: "AIzaSyDohZMBbT1TVeDf-zu1B0S3tMXvxbgiL94",
-            authDomain: "aviral-vlogs.firebaseapp.com",
-            databaseURL: "https://aviral-vlogs.firebaseio.com",
-            projectId: "aviral-vlogs",
-            storageBucket: "aviral-vlogs.appspot.com",
-            messagingSenderId: "649916051517"
+            apiKey: "AIzaSyCnMKBVJr7Vnvng6jSPnAEJCuj2ul4wgjM",
+            authDomain: "premium-nuance-240410.firebaseapp.com",
+            databaseURL: "https://premium-nuance-240410.firebaseio.com",
+            projectId: "premium-nuance-240410",
+            storageBucket: "premium-nuance-240410.appspot.com",
+            messagingSenderId: "889683112527"
         };
         firebase.initializeApp(config);
         var storage = firebase.storage();
