--- a/login.html
+++ b/login.html
@@ -91,12 +91,12 @@
     <script>
         // Initialize Firebase
         var config = {
-            apiKey: "AIzaSyDohZMBbT1TVeDf-zu1B0S3tMXvxbgiL94",
-            authDomain: "aviral-vlogs.firebaseapp.com",
-            databaseURL: "https://aviral-vlogs.firebaseio.com",
-            projectId: "aviral-vlogs",
-            storageBucket: "aviral-vlogs.appspot.com",
-            messagingSenderId: "649916051517"
+            apiKey: "AIzaSyCnMKBVJr7Vnvng6jSPnAEJCuj2ul4wgjM",
+            authDomain: "premium-nuance-240410.firebaseapp.com",
+            databaseURL: "https://premium-nuance-240410.firebaseio.com",
+            projectId: "premium-nuance-240410",
+            storageBucket: "premium-nuance-240410.appspot.com",
+            messagingSenderId: "889683112527"
         };
         firebase.initializeApp(config);
         var storage = firebase.storage();
@@ -126,7 +126,7 @@
   },
   // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
   
-          signInSuccessUrl: 'https://aviral-vlogs.firebaseapp.com',      //to be changed at production
+          signInSuccessUrl: 'https://premium-nuance-240410.firebaseapp.com',      //to be changed at production
           signInOptions: [
             // Leave the lines as is for the providers you want to offer your users.
             firebase.auth.GoogleAuthProvider.PROVIDER_ID
