--- a/sidenav.html
+++ b/sidenav.html
@@ -40,9 +40,9 @@ const commentTemplate = "<div class='comment-container row valign-wrapper'>" + "
 fetchData();
 
 // firebase.initializeApp({
-//     apiKey: 'AIzaSyDohZMBbT1TVeDf-zu1B0S3tMXvxbgiL94',
-//     authDomain: 'aviral-vlogs.firebaseapp.com',
-//     projectId: 'aviral-vlogs'
+//     apiKey: 'AIzaSyCnMKBVJr7Vnvng6jSPnAEJCuj2ul4wgjM',
+//     authDomain: 'premium-nuance-240410.firebaseapp.com',
+//     projectId: 'premium-nuance-240410'
 // });
 
 $(document).ready(function () {
@@ -241,7 +241,7 @@ addMessage({type: "Post"}).then(function(result) {
 
 function addcomment(evt, id) {
     if (!isUserSignedIn()) {
-        window.location.href = "https://aviral-vlogs.firebaseapp.com/login.html";
+        window.location.href = "https://premium-nuance-240410.firebaseapp.com/login.html";
         return;
     }
     console.log(id);
