added notes page

--- a/book-reviews.html
+++ b/book-reviews.html
@@ -30,14 +30,14 @@
         <div class="navbar-fixed">
             <nav>
                 <div class="nav-wrapper blue darken-1">
-                    <a href="index.html" class="brand-logo">Book Reviews</a>
+                    <a href="index.html" class="brand-logo">Notes</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <span class="right">
                         <ul class="hide-on-med-and-down">
                             <li><a href="discussion.html"><i class="material-icons left">speaker_notes</i>Discussion
                                     forum
                                 </a></li>
-                            <li><a id="edit-button" href="book-reviews.html"><i class="material-icons left">book</i>Book
+                            <li><a id="edit-button" href="notes.html"><i class="material-icons left">book</i>Book
                                     Reviews</a></li>
                             <li><a href="vod.html"><i class="material-icons left">video_library</i>Videos</a>
                             </li>
@@ -74,8 +74,8 @@
         <li><a href="index.html" class="waves-effect"><i class="material-icons left">home</i>Home</a></li>
         <li><a href="discussion.html" class="waves-effect"><i class="material-icons left">speaker_notes</i>Discussion
                 forum</a></li>
-        <li><a id="book-reviews" href="book-reviews.html" class="waves-effect"><i
-                    class="material-icons left">book</i>Book Reviews</a></li>
+        <li><a id="notes" href="notes.html" class="waves-effect"><i
+                    class="material-icons left">book</i>Notes</a></li>
         <li><a href="vod.html" class="waves-effect"><i class="material-icons left">video_library</i>Videos</a>
         </li>
         <li><a href="practice-sheets.html" class="waves-effect"><i class="material-icons left">file_copy</i>Practice Sheets</a>
@@ -155,7 +155,7 @@
 
     </script>
     <script src="auth.js"></script>
-    <script src="book-reviews.js"></script>
+    <script src="notes.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 </body>
