--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
                             <li><a href="discussion.html"><i class="material-icons left">speaker_notes</i>Discussion
                                     forum
                                 </a></li>
-                            <li><a id="edit-button" href="book-reviews.html"><i class="material-icons left">book</i>Book
+                            <li><a id="edit-button" href="notes.html"><i class="material-icons left">book</i>Book
                                     Reviews</a></li>
                             <li><a href="vod.html"><i class="material-icons left">video_library</i>Videos</a>
                             </li>
