--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <li><a href="discussion.html"><i class="material-icons left">speaker_notes</i>Discussion
                                     forum
                                 </a></li>
-                            <li><a id="edit-button" href="book-reviews.html"><i class="material-icons left">book</i>Book
+                            <li><a id="edit-button" href="notes.html"><i class="material-icons left">book</i>Book
                                     Reviews</a></li>
                             <li><a href="vod.html"><i class="material-icons left">video_library</i>Videos</a>
                             </li>
@@ -74,8 +74,8 @@
         <li><a href="index.html" class="waves-effect"><i class="material-icons left">home</i>Home</a></li>
         <li><a href="discussion.html" class="waves-effect"><i class="material-icons left">speaker_notes</i>Discussion
                 forum</a></li>
-        <li><a id="book-reviews" href="book-reviews.html" class="waves-effect"><i
-                    class="material-icons left">book</i>Book Reviews</a></li>
+        <li><a id="notes" href="notes.html" class="waves-effect"><i
+                    class="material-icons left">book</i>Notes</a></li>
         <li><a href="vod.html" class="waves-effect"><i class="material-icons left">video_library</i>Videos</a>
         </li>
         <li><a href="practice-sheets.html" class="waves-effect"><i class="material-icons left">file_copy</i>Practice Sheets</a>
@@ -91,6 +91,7 @@
         <br>
         <div id="post" style="display:none">
             <textarea id="summernote" name="editordata"></textarea>
+            <textarea id="ntitle"></textarea>
             <button class="btn" onclick="postData()">Post</button>
             <span style="display:none;color: green" id="posting"><br>Posting..</span>
             <span style="display:none" id="postcomplete">Posted succesfully</span>
