--- a/notes.html
+++ b/notes.html
@@ -37,7 +37,7 @@
                             <li><a href="discussion.html"><i class="material-icons left">speaker_notes</i>Discussion
                                     forum
                                 </a></li>
-                            <li><a id="edit-button" href="book-reviews.html"><i class="material-icons left">book</i>Book
+                            <li><a id="edit-button" href="notes.html"><i class="material-icons left">book</i>Book
                                     Reviews</a></li>
                             <li><a href="vod.html"><i class="material-icons left">video_library</i>Videos</a>
                             </li>
@@ -75,9 +75,11 @@
         <li><a href="index.html" class="waves-effect"><i class="material-icons left">home</i>Home</a></li>
         <li><a href="discussion.html" class="waves-effect"><i class="material-icons left">speaker_notes</i>Discussion
                 forum</a></li>
-        <li><a id="book-reviews" href="book-reviews.html" class="waves-effect"><i
-                    class="material-icons left">book</i>Book Reviews</a></li>
+        <li><a id="notes" href="notes.html" class="waves-effect"><i
+                    class="material-icons left">book</i>Notes</a></li>
         <li><a href="vod.html" class="waves-effect"><i class="material-icons left">video_library</i>Videos</a>
+        </li>
+        <li><a href="practice-sheets.html" class="waves-effect"><i class="material-icons left">file_copy</i>Practice Sheets</a>
         </li>
         <li id="sign-out-sidenav" class="hide-on-log-out" onclick="signOut()"><a href="#" class="waves-effect"><i
                     class="fa fa-2x fa-sign-out left" aria-hidden="true"></i>Sign Out</a></li>
