--- a/sidenav.html
+++ b/sidenav.html
@@ -12,8 +12,8 @@
         <li><a href="index.html" class="waves-effect"><i class="material-icons left">home</i>Home</a></li>
         <li><a href="discussion.html" class="waves-effect"><i class="material-icons left">speaker_notes</i>Discussion
                 forum</a></li>
-        <li><a id="book-reviews" href="book-reviews.html" class="waves-effect"><i
-                    class="material-icons left">book</i>Book Reviews</a></li>
+        <li><a id="notes" href="notes.html" class="waves-effect"><i
+                    class="material-icons left">book</i>Notes</a></li>
         <li><a href="vod.html" class="waves-effect"><i class="material-icons left">video_library</i>Videos</a>
         </li>
         <li id="sign-out-sidenav" class="hide-on-log-out" onclick="signOut()"><a href="#" class="waves-effect"><i
