--- a/vod.html
+++ b/vod.html
@@ -91,6 +91,7 @@
         <br>
         <div id="post" style="display:none">
             <textarea id="summernote" name="editordata"></textarea>
+            <textarea id="ntitle"></textarea>
             <button class="btn" onclick="postData()">Post</button>
             
             <span style="display:none;color: green" id="posting"><br>Posting..</span>
