Added privacy policy

--- a/notes.html
+++ b/notes.html
@@ -83,6 +83,8 @@
         </li>
         <li id="sign-out-sidenav" class="hide-on-log-out" onclick="signOut()"><a href="#" class="waves-effect"><i
                     class="fa fa-2x fa-sign-out left" aria-hidden="true"></i>Sign Out</a></li>
+                    <li><a href="https://eduforum.flycricket.io/privacy.html" class="waves-effect"><i
+                        class="material-icons left">file_copy</i>Privacy Policy</a></li>
     </ul>
 
     <main>
